最终版本，冲冲冲

--- a/src/app/student-component/student-component.component.html
+++ b/src/app/student-component/student-component.component.html
@@ -130,15 +130,15 @@
           </div>
           <div class="modal-body">
             <label for="id">学号</label>
-            <input type="number" class="form-control " id="id" name="id" [formControl]='id'>
+            <input type="number" class="form-control " id="id" name="id" [formControl]='id' disabled="disabled">
           </div>
           <div class="modal-body">
             <label for="userName">姓名</label>
-            <input type="text" class="form-control" id="userName" name="userName" [formControl]='userName'>
+            <input type="text" class="form-control" id="userName" name="userName" [formControl]='userName' disabled="disabled">
           </div>
           <div class="modal-body">
             <label for="password">成绩</label>
-            <input type="number" class="form-control" id="password" name="password" [formControl]='password'>
+            <input type="number" class="form-control" id="password" name="password" [formControl]='password' disabled="disabled">
           </div>
           <div>
             <div class="container row-12 " style="text-align:center ;margin-bottom: 1rem;" >
