--- a/src/app/user-component/user-component.component.html
+++ b/src/app/user-component/user-component.component.html
@@ -53,7 +53,7 @@
           </div>
           <div class="modal-body">
             <label for="password">密码</label>
-            <input type="number" class="form-control" id="password" name="password" [formControl]='password'>
+            <input type="text" class="form-control" id="password" name="password" [formControl]='password'>
           </div>
           <div style="text-align: center;margin-bottom: 1rem">
             <button type="button" class="btn btn-outline-primary" style="width: 7rem;" (click)="add()" (click)="modalRef.hide()"
@@ -94,11 +94,11 @@
           </div>
           <div class="modal-body">
             <label for="userName">用户名</label>
-            <input type="text" class="form-control" id="userName" name="userName" [formControl]='userName'>
+            <input type="text" class="form-control" id="userName" name="userName" [formControl]='userName' >
           </div>
           <div class="modal-body">
             <label for="password">密码</label>
-            <input type="number" class="form-control" id="password" name="password" [formControl]='password'>
+            <input type="text" class="form-control" id="password" name="password" [formControl]='password'>
           </div>
           <div style="text-align: center;margin-bottom: 1rem">
             <button type="button" class="btn btn-outline-primary" style="width: 7rem;" (click)="update()"
@@ -118,11 +118,11 @@
           </div>
           <div class="modal-body">
             <label for="userName">用户名</label>
-            <input type="text" class="form-control" id="userName" name="userName" [formControl]='userName'>
+            <input type="text" class="form-control" id="userName" name="userName" [formControl]='userName' disabled="disabled">
           </div>
           <div class="modal-body">
             <label for="password">密码</label>
-            <input type="number" class="form-control" id="password" name="password" [formControl]='password'>
+            <input type="text" class="form-control" id="password" name="password" [formControl]='password' disabled="disabled">
           </div>
           <div>
             <div class="container row-12 " style="text-align:center ;margin-bottom: 1rem;">
