--- a/src/app/student-component/student-component.component.html
+++ b/src/app/student-component/student-component.component.html
@@ -54,7 +54,7 @@
           </div>
           <div class="modal-body">
             <label for="id">学号</label>
-            <input type="number" class="form-control " id="id" name="id" [formControl]='id'>
+            <input type="text" class="form-control " id="id" name="id" [formControl]='id'>
           </div>
           <div class="modal-body">
             <label for="userName">姓名</label>
@@ -83,7 +83,7 @@
           </div>
           <div class="modal-body">
             <label for="id">学号</label>
-            <input type="number" class="form-control " id="id" name="id" [formControl]='id'>
+            <input type="text" class="form-control " id="id" name="id" [formControl]='id'>
           </div>
           <div style="text-align: center;margin-bottom: 1rem">
             <button type="button" class="btn btn-primary" style="width: 7rem;" (click)="search()"
@@ -103,7 +103,7 @@
           </div>
           <div class="modal-body">
             <label for="id">学号</label>
-            <input type="number" class="form-control " id="id" name="id" [formControl]='id'>
+            <input type="text" class="form-control " id="id" name="id" [formControl]='id'>
           </div>
           <div class="modal-body">
             <label for="userName">姓名</label>
@@ -111,7 +111,7 @@
           </div>
           <div class="modal-body">
             <label for="password">成绩</label>
-            <input type="number" class="form-control" id="password" name="password" [formControl]='password'>
+            <input type="text" class="form-control" id="password" name="password" [formControl]='password'>
           </div>
           <div style="text-align: center;margin-bottom: 1rem;">
             <button type="button" class="btn btn-primary" style="width: 7rem;" (click)="update()"
@@ -130,7 +130,7 @@
           </div>
           <div class="modal-body">
             <label for="id">学号</label>
-            <input type="number" class="form-control " id="id" name="id" [formControl]='id' disabled="disabled">
+            <input type="text" class="form-control " id="id" name="id" [formControl]='id' disabled="disabled">
           </div>
           <div class="modal-body">
             <label for="userName">姓名</label>
